Allow passing a SECRET_KEY via environment variables.

--- a/.env.prod
+++ b/.env.prod
@@ -1,3 +1,6 @@
 FLASK_APP=/usr/src/app/app.py
 FLASK_ENV=production
 DATABASE_URI=sqlite:////usr/src/db/flask_app.db
+
+# Use a fixed secret key if desired
+# SECRET_KEY=AAAAAAAAAAAAAAAAA
