--- a/.env.dev
+++ b/.env.dev
@@ -1,3 +1,6 @@
 FLASK_APP=/usr/src/app/app.py
 FLASK_ENV=development
 DATABASE_URI=sqlite:////tmp/test.db
+
+# Use a fixed secret key if desired
+# SECRET_KEY=AAAAAAAAAAAAAAAAA
